otel debugging and testing infra related changes
Signed-off-by: Stevan Buzejic <buzejic.stevan@gmail.com>